--- a/feelings/static/feelings/styles.css
+++ b/feelings/static/feelings/styles.css
@@ -63,6 +63,30 @@
     font-family: sans-serif;
   }
 
+  .form-field{
+    display: block;
+    font-size: 16px;
+    margin: 20px auto;
+    width: 30%;
+  }
+
+  .form-button{
+    display:block;
+    margin: 0 auto;
+    width: 30%;
+    background-color:  #F2BE22; 
+    padding: 10px;
+    border-radius: 10px;
+    border: 0px;
+    font-size: 16px;
+  }
+
+  .welcome{
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+
   .feeling-description-container > element{
     display: none;
   }
